--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,6 @@
 IN PROGRESS:
 
 STILL TODO:
-* Not clear how to reproduce this, but I think I simply did "docker compose up --build", and then I noticed that none (or few) of the bots were actually running, despite some players having "allow_bot_to_play_for_me" be True.
-
-  I guess I need to do something at startup to ensure that all the bot services are up?  I'd have thought daemontools would have taken care of that for me.
-
 * Make it obvious for a new user what they need to do to start playing.  Some sort of old-school "Wizard" seems appropriate.
 
 * Most places where a player's name appears -- in particular, the header row of the auction history, and the "four-hands" div -- should be links to their detail pages.
@@ -162,6 +158,14 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* Not clear how to reproduce this, but I think I simply did "docker compose up --build", and then I noticed that none (or few) of the bots were actually running, despite some players having "allow_bot_to_play_for_me" be True.
+
+  I guess I need to do something at startup to ensure that all the bot services are up?  I'd have thought daemontools would have taken care of that for me.
+
+  On futher reflection, I think most of the bot players weren't seated for some reason, which prevents their bots from coming up.
+
+  So now, the question is: what brings the bots up normally? Answer: the Dockerfile invokes `bring_up_all_api_bots` before starting `svscan`.
+
 * Put the green highlight on the player whose turn it is to *call*, just as we do for when it's their turn to *play*
 
 * At the end of a tournament, something should create a new one.  In general, we should have an invariant that says there is always exactly one uncompleted tournament.
