--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,10 @@ IN PROGRESS:
 * Make it obvious for a new user what they need to do to start playing.  Some sort of old-school "Wizard" seems appropriate.
 
 STILL TODO:
+* Ponder: if a tournament is still running, but one player has played all the boards, should they be allowed to create a new tournament?  If so, that'd mean there is more than one "current" tournament, and I'd probably get confused.  But if not, they cannot play until the existing tournament finishes, which it might never.
+
+  Simplest thing: set a "django message" that says something like "no tournament for you, this tournament is still running", then redirect to a list of hands that are still being played (so we can at least have something to watch while we wait).
+
 * Let users create synthetic players, if there aren't enough already to play with.
 
 * Whatever happened to lobby chat?  It must have slipped into a crack at some point.
