--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,14 @@
 IN PROGRESS:
 
 STILL TODO:
+* Consider using [django's built-in permissions](https://docs.djangoproject.com/en/5.1/topics/auth/default/#topic-authorization) to control access to hands, rather than doing it "by hand" (haw haw) as I'm currently doing.
+
+* Improve the "play summary" at the bottom of the hand archive view: I can never follow it!
+
+  I designed it to conform to the "Bridge Writing Style Guide by Richard Pavlicek.pdf", but just because that dude says to use it, doesn't mean it makes it easy for me.
+
+  Perhaps create an alternative layout that makes more sense, and have a little toggle switch with which the viewer can flip from one layout to the other.  Label them "Pavlicek" and "Modern"; and save their choice in the Player or User object (or some other table that is one-to-one with Users).
+
 * Ponder: if a tournament is still running, but one player has played all the boards, should they be allowed to create a new tournament?  If so, that'd mean there is more than one "current" tournament, and I'd probably get confused.  But if not, they cannot play until the existing tournament finishes, which it might never.
 
   Simplest thing: set a "django message" that says something like "no tournament for you, this tournament is still running", then redirect to a list of hands that are still being played (so we can at least have something to watch while we wait).
