--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,10 @@ STILL TODO:
 
   Perhaps create an alternative layout that makes more sense, and have a little toggle switch with which the viewer can flip from one layout to the other.  Label them "Pavlicek" and "Modern"; and save their choice in the Player or User object (or some other table that is one-to-one with Users).
 
+  Another idea: just add two skinny columns to the right of the existing display.  In each trick row, one column will have a mark if the trick was won by north/south; the other column will have a mark if it was won by east/west.
+
+  I think of the two columns as having different marks: the n/s one will be a sort of vertical blob like `|`; the e/w one will be a horizontal blob like `-`.  They are to suggest the position of the relevant hands in the above hand layout.
+
 * Ponder: if a tournament is still running, but one player has played all the boards, should they be allowed to create a new tournament?  If so, that'd mean there is more than one "current" tournament, and I'd probably get confused.  But if not, they cannot play until the existing tournament finishes, which it might never.
 
   Simplest thing: set a "django message" that says something like "no tournament for you, this tournament is still running", then redirect to a list of hands that are still being played (so we can at least have something to watch while we wait).
