--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
 IN PROGRESS:
+* Ponder: if a tournament is still running, but one player has played all the boards, should they be allowed to create a new tournament?  If so, that'd mean there is more than one "current" tournament, and I'd probably get confused.  But if not, they cannot play until the existing tournament finishes, which it might never.
+
+  Simplest thing: set a "django message" that says something like "no tournament for you, this tournament is still running", then redirect to a list of hands that are still being played (so we can at least have something to watch while we wait).
+
 
 STILL TODO:
 * An RSS feed! Maybe each completed hand, or each completed tournament, would appear in it.
