--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,20 @@ IN PROGRESS:
 Note: to reliably load a fixture, do e.g. `just drop migrate manage loaddata now_what && just --no-deps runme`
 
 STILL TODO:
+* After finding a partner, the next step should be a choice:
+  - join a tournament
+    Maybe you should get a chance to choose a tournament style, or the time it starts, or something
+    This should bring you to https://bridge.offby1.info/players/?has_partner=True&seated=False&exclude_me=True&tournament=123
+  - just futz around at a table for fun
+    This should create synths to play with if there isn't already a "fun" table with an open slot
+    The boards should NOT be the same boards that were generated for a tournament
+
+* MOVEMENTS
+
+  I must be getting cocky; now that tournaments mostly work, this is the only missing thing I can think of.
+
+  There might be a couple of movements to choose from, plus "no movement at all" (which is what we've currently got); each tournament would be associated with exactly one such, and it cannot be changed once the tournament is created.
+
 * God Mode doesn't show all four hands during the auction; only during play.
 
 * An RSS feed! Maybe each completed hand, or each completed tournament, would appear in it.
@@ -18,15 +32,15 @@ STILL TODO:
 
 * Consider using [django's built-in permissions](https://docs.djangoproject.com/en/5.1/topics/auth/default/#topic-authorization) to control access to hands, rather than doing it "by hand" (haw haw) as I'm currently doing.
 
-* Ponder: if a tournament is still running, but one player has played all the boards, should they be allowed to create a new tournament?  If so, that'd mean there is more than one "current" tournament, and I'd probably get confused.  But if not, they cannot play until the existing tournament finishes, which it might never.
-
-  Simplest thing: set a "django message" that says something like "no tournament for you, this tournament is still running", then redirect to a list of hands that are still being played (so we can at least have something to watch while we wait).
-
-  Another idea: when we create a tournament, we associate with it two timestamps in the future:
+* Another idea for end-of-tournament: when we create a tournament, we associate with it two timestamps in the future:
 
   * One is the "joining deadline" -- after this time, no more tables can join the tournament.
 
-  * The other is the "play deadline" -- after this time, any tables that haven't finished all their boards are rudely ejected.  Dunno what to do about the board that they *have* finished (maybe exclude them from appearing in the board-archive view?).
+    If this deadline passes, and there isn't a reasonable number of players (eight?) for a tournament, then make some up with synths.
+
+    How would players "sign up" for an upcoming tournament? 🤔
+
+  * The other is the "play deadline" -- after this time, any tables that haven't finished all their boards are rudely ejected.  Dunno what to do about the hand that they *have* finished (maybe exclude them from appearing in the board-archive view?).
 
     This time should be the joining deadline + however much time seems reasonable to play all the boards in this tournament.
 
@@ -43,12 +57,6 @@ STILL TODO:
     Now the "lobby" link goes to the player list, with seated players filtered out.
 
   Yikes, that was a long time ago.
-
-* MOVEMENTS
-
-  I must be getting cocky; now that tournaments mostly work, this is the only missing thing I can think of.
-
-  There might be a couple of movements to choose from, plus "no movement at all" (which is what we've currently got); each tournament would be associated with exactly one such, and it cannot be changed once the tournament is created.
 
 * Make the UI not suck.
 
