A glimmer of a thought

--- a/TODO.txt
+++ b/TODO.txt
@@ -19,6 +19,8 @@ STILL TODO:
 
   I guess our constraint about tournaments should change from "only one running tournament at a time" to, I dunno, "no more than one tournament whose signup deadline hasn't passed".  Might be OK to have two or more tournaments whose *play* deadlines haven't yet passed, though.
 
+  OTOH, perhaps there should be *three* tournaments signing up at a time, spaced 8 hours apart, so that people around the world can find a convenient time to play.  Gotta plan for success!
+
 * MOVEMENTS
 
   I must be getting cocky; now that tournaments mostly work, this is the only missing thing I can think of.
