--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,17 @@ IN PROGRESS:
       - If a player, I might want to enforce that they have a partner at signup time
         Or maybe not!  If not, then when they search for a suitable partner, it should exclude players who are already signed up for some other tournament.  Or maybe it should include them, but *indicate* that they are so signed up (so that they can chat and perhaps agree on a tournament to enter)
 
+        OK here's an idea.
+        New model: TournamentSignups.  The table is basically a tournament ID and a player ID.
+        Unique constraint on that pair of columns, or perhaps just the player ID (since it seems wrong to sign up for more than one tournament).
+        When a player signs up, we
+        - reject them if the tournament is not in OpenForSignup
+        - reject them if they have no partner
+        - automatically sign up their partner as well
+        When the signup deadline passes, the tournament code
+        - seats all the players who are signed up (confirming that each still has the same partner who is also signed up)
+        - deletes the corresponding entry from the TournamentSignups table
+
   * The other is the "play deadline" -- after this time, any tables that haven't finished all their boards are rudely ejected.  Dunno what to do about the hand that they *have* finished (maybe exclude them from appearing in the board-archive view?).
 
     This time should be the joining deadline + however much time seems reasonable to play all the boards in this tournament.
