Un-sign-up everybody when a tournament completes.

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,8 +21,10 @@ IN PROGRESS:
         - seats all the players who are signed up (confirming that each still has the same partner who is also signed up)
         - deletes the corresponding entry from the TournamentSignups table
 
-    Should it be possible to cancel a signup?  If so, what happens?
-    Should splitsville un-sign-up the relevant players?
+    - Should it be possible to cancel a signup?  If so, what happens?
+      Seems like if a tournament is complete, we shouldn't have people signed up for it.
+
+    - Should splitsville un-sign-up the relevant players?
 
   * The other is the "play deadline" -- after this time, any tables that haven't finished all their boards are rudely ejected.  Dunno what to do about the hand that they *have* finished (maybe exclude them from appearing in the board-archive view?).
 
