--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 IN PROGRESS:
+* Somehow stress the "expiring-deadlines" branch.  I won't feel comfortable merging it into main until then.
 Note: to reliably load a fixture, do e.g. `just drop migrate manage loaddata now_what && just --no-deps runme`
 
 STILL TODO:
