--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,9 @@ IN PROGRESS:
 Note: to reliably load a fixture, do e.g. `just drop migrate manage loaddata now_what && just --no-deps runme`
 
 STILL TODO:
+* Replace `app.models.tournament.check_for_expirations` with something more sensible
+  I've got a "django-q2" branch that uses a third-party scheduler; iirc it kinda mostly works.
+  [Django-tasks](https://github.com/realOrangeOne/django-tasks) looks like it'll become the Official Way to do this sort of thing; here's a [Django Enhancement Proposal](  https://github.com/django/deps/blob/5746805dfb062a99555b5e5bbc5b1685212aba2c/accepted/0014-background-workers.rst#L26) for it.
 * Ensure that timestamps (in particular, tournament deadlines) show up in the browser in the user's preferred time zone.
   - https://docs.djangoproject.com/en/dev/topics/i18n/timezones/#selecting-the-current-time-zone is one (rather tedious) way to do that;
   - maybe I can just embed calls to the Javascript `Date` function in the web pages, thereby letting the browser handle it
