--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,15 @@
 IN PROGRESS:
-* Maybe give some idea of user activity, in the lobby: e.g. if a user's "last_login" was a while ago, make the font dim; or if they last posted a chat message or sat at a table or took an action in a game.
-
-  Also: player_list ought to let you click a column header to control the sort order.  The default order should be "most-recently-active players first".
+* player_list ought to let you click a column header to control the sort order.  The default order should be "most-recently-active players first".
 
 Note: to reliably load a fixture, do e.g. `just drop migrate manage loaddata now_what && just --no-deps runme`
 
 STILL TODO:
+* MOVEMENTS
+
+  I must be getting cocky; now that tournaments mostly work, this is the only missing thing I can think of.
+
+  There might be a couple of movements to choose from, plus "no movement at all" (which is what we've currently got); each tournament would be associated with exactly one such, and it cannot be changed once the tournament is created.
+
 * Ensure that timestamps (in particular, tournament deadlines) show up in the browser in the user's preferred time zone.
   - https://docs.djangoproject.com/en/dev/topics/i18n/timezones/#selecting-the-current-time-zone is one (rather tedious) way to do that;
   - maybe I can just embed calls to the Javascript `Date` function in the web pages, thereby letting the browser handle it
@@ -37,12 +41,6 @@ STILL TODO:
   I guess our constraint about tournaments should change from "only one running tournament at a time" to, I dunno, "no more than one tournament whose signup deadline hasn't passed".  Might be OK to have two or more tournaments whose *play* deadlines haven't yet passed, though.
 
   OTOH, perhaps there should be *three* tournaments signing up at a time, spaced 8 hours apart, so that people around the world can find a convenient time to play.  Gotta plan for success!
-
-* MOVEMENTS
-
-  I must be getting cocky; now that tournaments mostly work, this is the only missing thing I can think of.
-
-  There might be a couple of movements to choose from, plus "no movement at all" (which is what we've currently got); each tournament would be associated with exactly one such, and it cannot be changed once the tournament is created.
 
 * God Mode doesn't show all four hands during the auction; only during play.
 
@@ -201,6 +199,8 @@ MAYBE TODO:
 * Reconsider sqlite -- [this](https://gcollazo.com/optimal-sqlite-settings-for-django/) strongly suggests it's viable for smallish projects such as this.
 
 DONE:
+* Maybe give some idea of user activity, in the lobby: e.g. if a user's "last_login" was a while ago, make the font dim; or if they last posted a chat message or sat at a table or took an action in a game.
+
 * Another idea for end-of-tournament: when we create a tournament, we associate with it two timestamps in the future:
 
   * One is the "joining deadline" -- after this time, no more tables can join the tournament.
